<resources>
    <string name="app_name">Tiểu Thuyết Ngôn Tình</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="history">Đang Đọc</string>
    <string name="new_book">Truyện Mới</string>
    <string name="hot">Truyện Hot</string>

    <string name="author">Tác giả:&#160;</string>
    <string name="cat_name">Chuyên mục:&#160;</string>

    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="increase_text_size">Tăng cỡ chữ</string>
    <string name="decrease_text_size">Giảm cỡ chữ</string>

    <string name="current_chap">Chương đang đọc:&#160;</string>

    <string name="error_last_chap">Bạn đang đọc chap mới nhất, truyện sẽ tiếp tục cập nhật. Hãy click vào quảng cáo để ủng hộ tác giả bạn nhé.</string>

    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="close">Đóng</string>

    <string name="message_exit_app">Bạn hãy đánh giá 5 sao cho phần mềm nhé :)</string>

    <string name="tieu_thuyet_ngon_tinh_text_size">tieu_thuyet_ngon_tinh_text_size</string>
</resources>
